--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
 Flask==1.0.2
+flask-talisman==0.7.0
 gast==0.2.2
 google-api-core==1.17.0
 google-auth==1.14.1
